<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.collection.ExhibitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="445dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/exhibit_image"
                    android:layout_width="360dp"
                    android:layout_height="405dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat" />

                <TextView
                    android:id="@+id/exhibitTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/exhibit_name"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="17sp"
            android:textColor="@color/black"

            android:text="@string/exhibit_description" />


    </LinearLayout>
</ScrollView>